2014-09-30  Georg-Johann Lay  <avr@gjlay.de>

	* AUTHORS: New file.

2014-09-30  Georg-Johann Lay  <avr@gjlay.de>

	* logging.c (s_SREG): Make global.
	(log_add_flag_read): New function.
	(branch_on_sreg_condition): Use it.
	(data_write_magic_port) <leave>: Add exit value to reason.

2014-09-30  Georg-Johann Lay  <avr@gjlay.de>

	* dejagnuboargs/exit.c (xargc, xargv): Clean up.
	(init_exit_c:file_exit_c): Initialize statically.

2014-09-30  Georg-Johann Lay  <avr@gjlay.de>

	Support -q for quiet operation.

	* README (-q): Document it.
	* options.def (q): New entry.
	* avrtest.c (stdarg.h): Include it.
	(qprintf): New function.
	(leave): Use it as needed, pass exit status from program on -q.
	Turn to varargs function.
	* logging.c (putchar_escaped): New function.
	(do_put_args): Use it.  And use qprintf as needed.
	(do_log_cmd, perf_instruction, log_dump_line): Use qprintf as needed.
	* options.c (USAGE): Add -q.
	(usage): Turn to varargs function.
	(get_valid_number): New function.
	(parse_args) [-e,-m]: Use it.
	* testavr.h (qprintf): New prototype.
	(EXIT_STATUS_USAGE, EXIT_STATUS_FATAL): New exit stati.

2014-09-29  Georg-Johann Lay  <avr@gjlay.de>

	Support -args, -no-log, LOG_PORT.

	* logging.c: New file.
	* testavr.h: New file.
	* options.h: New file.
	* options.c: New file.
	* options.def: New file.
	* Makefile: Tidy up.
	(logging.o, options.o): New rules to build them.
	* avrtest.c (is_xmega): New const.
	(INLINE, NOINLINE, NORETURN, FASTCALL, OP_FUNC_TYPE)
	(EXIT_STATUS_EXIT, EXIT_STATUS_ABORTED, EXIT_STATUS_TIMEOUT)
	(MAX_RAM_SIZE, MAX_FLASH_SIZE, PC_VALID_MASK, ID_*)
	(byte, word, dword, decoded_op, opcode_t): Move to testavr.h.
	(log_add_instr, log_add_bit, log_add_immed, log_add_data_mov)
	(log_add_reg_mov, log_dump_line, mask_to_bit, log_put_bit):
	Move to logging.c.
	(arch_t): Move to options.h
	(arch, usage, parse_args): Move to options.c
	(flag_have_*): Replace by options.do_*.
	(program_name): Use options.program_name instead.