@@ -1,3 +1,7 @@
+Theodore A. Roth              Original author.
+
+Klaus Rudolph                 Original author.
+
 Bjoern Haase                  Contributed exit.c.
 
 Eric B. Weddington            Import into CVS.
